--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,9 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
 # compiled output
-# /dist TODO: Revist this when I can figure out how to copy index.html into dist using webpack
 /tmp
 /out-tsc
-/dist
+/disc
 
 # dependencies
 /node_modules
